[project]
name = "roof-parser"
version = "0.1.0-alpha.2"
description = "Just a parser that parses details from 'krisha.kz'"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "python-dotenv>=1.0.1",
    "click>=8.1.7",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
]
